--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   "devDependencies": {
     "cypress": "^9.5.0",
     "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3"
+    "ts-jest": "^27.1.3",
+    "typescript-styled-plugin": "^0.18.2"
   }
 }
