--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "plugins": [{
+      "name": "typescript-styled-plugin",
+      "validate": true
+    }],
     "target": "es5",
     "lib": [
       "dom",
