add styling for the game start menu, for mobile, tablet, and desktop sizes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "plugins": [{
       "name": "typescript-styled-plugin",
-      "validate": true
+      "validate": false
     }],
     "target": "es5",
     "lib": [
